[package]
name = "abcd-address-indexer"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocksdb = "0.15"
plain = "0.2"
abcd-base = {path="../abcd-base"}
cxx = "1.0"
hex = "0.4"
tonic = "0.3"
prost = "0.6"
itertools = "0.9"
sha2 = "0.9"

[build-dependencies]
tonic-build = "0.3"
