[package]
name = "abcd-bridge"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bridge to ABC
cxx = "1.0"

[build-dependencies]
# bridge to ABC
cxx-build = "1.0"
