[package]
name = "abcd"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# bridge to ABC
cxx = "1.0"

abcd-base = { path="../abcd-base" }
abcd-address-indexer = { path="../abcd-address-indexer" }

tonic = "0.3"
tokio = "0.2"

[build-dependencies]
# bridge to ABC
cxx-build = "1.0"
